--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fake-pokecord",
   "version": "1.0.0",
-  "description": "An immitation Pokécord to prank Pokécord users",
+  "description": "An imitation Pokécord to prank Pokécord users",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
